--- a/Question 3/public/index.html
+++ b/Question 3/public/index.html
@@ -42,13 +42,14 @@
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/controllers/auth.client.controller.js"></script>
+    <script src="js/controllers/nav.client.controller.js"></script>
     <script src="js/services/pouch.client.service.js"></script>
 
 </head>
 
 <body>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" ng-controller="NavbarCtrl">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -61,6 +62,9 @@
                 <a class="navbar-brand" href="/">Question 3</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
+                <ul ng-if="isAuthenticated()" class="nav navbar-nav pull-right">
+                    <li><a href="/logout">Logout</a></li>
+                </ul>
             </div><!--/.nav-collapse -->
         </div>
     </nav>
