Feat(eHealth): Made sereval changes and concluded question 3

--- a/Question 3/public/index.html
+++ b/Question 3/public/index.html
@@ -13,11 +13,13 @@
     <link href="//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link href="//cdn.jsdelivr.net/animatecss/3.2.0/animate.css" rel="stylesheet">
     <link rel="stylesheet" href="vendor/angular-toastr/dist/angular-toastr.css">
     <link rel="stylesheet" href="vendor/angular-loading-bar/build/loading-bar.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
     <!-- JS -->
@@ -31,18 +33,21 @@
     <script src="vendor/angular-messages/angular-messages.min.js"></script>
     <script src="vendor/angular-aria/angular-aria.js"></script>
     <script src="vendor/ng-lodash/build/ng-lodash.min.js"></script>
-    <script src="vendor/moment/moment.js"></script>
-    <script src="vendor/angular-moment/angular-moment.js"></script>
-    <script src="vendor/angular-facebook/lib/angular-facebook.js"></script>
+    <script src="vendor/moment/min/moment.min.js"></script>
+    <script src="vendor/angular-moment/angular-moment.min.js"></script>
     <script src="vendor/pouchdb/dist/pouchdb.min.js"></script>
     <script src="vendor/angular-pouchdb/angular-pouchdb.min.js"></script>
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
+    <!--<script src="vendor/ng-facebook/ngFacebook.js"></script>-->
+
+    <script src="vendor/angular-facebook/lib/angular-facebook.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/controllers/auth.client.controller.js"></script>
     <script src="js/controllers/nav.client.controller.js"></script>
+    <script src="js/controllers/home.client.controller.js"></script>
     <script src="js/services/pouch.client.service.js"></script>
 
 </head>
